# openvino

cmake/: extra_modules.cmake
scripts/setupvars/: setupvars.bat  setupvars.ps1
src/common/transformations/src/transformations/common_optimizations/: common_optimizations.cpp
src/common/transformations/src/transformations/op_conversions/: group_query_attention_decomposition.cpp
src/core/gqa_extension/: CMakeLists.txt  group_query_attention.cpp  group_query_attention.hpp  ov_extension_gqa.cpp
src/core/include/openvino/op/: group_query_attention.hpp  ops.hpp
src/core/include/openvino/opsets/: opset15_tbl.hpp
src/core/src/op/: group_query_attention.cpp
src/core/tests/: opset.cpp
src/frontends/onnx/frontend/src/op/com.microsoft/: group_query_attention.cpp  matmulnbits.cpp  simplified_layer_normalization.cpp  skip_simplified_layer_normalization.cpp
src/frontends/onnx/frontend/src/op/experimental/: simplified_layer_normalization.cpp
src/frontends/onnx/tests/: CMakeLists.txt  onnx_import_com_microsoft.in.cpp  onnx_import_experimental.in.cpp
src/frontends/onnx/tests/models/com.microsoft/: skip_simplified_layer_normalization.prototxt
src/frontends/onnx/tests/models/experimental/: simplified_layer_normalization_with_scale.prototxt
src/plugins/intel_cpu/src/transformations/: transformation_pipeline.cpp
src/plugins/intel_gpu/src/plugin/: transformations_pipeline.cpp
